# lscal

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
handlers/: console.py  file.py  formatter.py  ntfy.py  webhook.py
src/lscal/: __main__.py  lscal.py
src/lscal/handlers/: console.py  ntfy.py
